# USTC_CG_24_HW

./: .gitignore  .gitmodules  README.md
Framework2D/: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  README.md
Framework2D/diagrams/: 1_MiniDraw.puml  2_ImageWarping.puml
Framework2D/include/view/: comp_canvas.h  comp_image.h  component.h  image.h  poisson.h  window.h
Framework2D/src/demo/: CMakeLists.txt  window_demo.cpp
Framework2D/src/view/: CMakeLists.txt  comp_canvas.cpp  comp_image.cpp  poisson.cpp  window.cpp
Framework2D/src/view/shapes/: ellipse.cpp  freehand.cpp  line.cpp  polygon.cpp  rect.cpp
Framework2D/src/view/warp/: fisheye.cpp  idw.cpp  rbf.cpp
Framework3D/: .clang-uml  .gitignore  CMakeLists.txt
Framework3D/source/GUI/: usdview_engine.cpp
Homeworks/: README.md
Homeworks/0_cpp_warmup/: README.md
Homeworks/0_cpp_warmup/project/: CMakeLists.txt  README.md
Homeworks/0_cpp_warmup/project/cmake/: helper.cmake
Homeworks/0_cpp_warmup/project/include/: PolynomialList.h  PolynomialMap.h
Homeworks/0_cpp_warmup/project/src/executables/1_BasicDArray/: CMakeLists.txt  DArray.cpp  DArray.h  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/2_EfficientDArray/: CMakeLists.txt  EDArray.cpp  EDArray.h  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/3_TemplateDArray/: CMakeLists.txt  TEDArray.hpp  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/4_list_Polynomial/: CMakeLists.txt  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/5_map_Polynomial/: CMakeLists.txt  TestPolynomial.h  test.cpp
Homeworks/0_cpp_warmup/project/src/libraries/shared/: CMakeLists.txt  PolynomialList.cpp
Homeworks/0_cpp_warmup/project/src/libraries/static/: CMakeLists.txt  PolynomialMap.cpp
Homeworks/0_cpp_warmup/project_rs/: 1_basic_d_array.rs  2_efficient_d_array.rs  Cargo.toml  README.md
Homeworks/0_cpp_warmup/samples/: README.md
Homeworks/10_character_animation/project/: CompositionGraph.json  GeoNodeSystem.json  README.md  RenderGraph.json  node_animate_mesh.cpp  (+1 more)
Homeworks/11_final_project/: main.typ
Homeworks/1_mini_draw/: README.md
Homeworks/2_image_warping/: README.md
Homeworks/3_poisson_image_editing/: README.md
Softwares/: CMake.md  Github.md  PowerShell.md  README.md
(+107 files in other folders)
